# mono

./: .gitmodules  Makefile.am  configure.ac  net_4_x.sln
bockbuild/mac-sdk/: gtk+.py  gtk-sharp.py  mono_master.py  profile.py
btls/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  CMakeMacros.txt  Makefile.am  MartinTest.cs  btls-bio.c  btls-bio.h  btls-key.c  btls-pkcs12.c  btls-ssl-ctx.c  btls-ssl-ctx.h  btls-ssl.c  btls-ssl.h  btls-util.c  btls-x509-chain.c  btls-x509-crl.c  btls-x509-lookup-method.c  btls-x509-lookup-method.h  btls-x509-name-list.c  btls-x509-name-list.h  btls-x509-name.h  btls-x509-store-ctx.c  btls-x509-verify-param.h  btls-x509.h  create-object-library.sh  martin-test.c  martin-test.h
mcs/class/: Makefile
mcs/class/Mono.Security.Providers.Btls/: Makefile  Mono.Security.Providers.Btls.csproj  Mono.Security.Providers.Btls.dll.sources
mcs/class/Mono.Security.Providers.Btls/Mono.Btls.Interface/: BtlsProvider.cs  BtlsX509.cs  BtlsX509Chain.cs  BtlsX509LookupMethod.cs  BtlsX509Name.cs  BtlsX509Object.cs  BtlsX509Store.cs  BtlsX509StoreCtx.cs  BtlsX509VerifyParam.cs
mcs/class/Mono.Security.Providers.Btls/Properties/: AssemblyInfo.cs
mcs/class/Mono.Security/Assembly/: AssemblyInfo.cs
mcs/class/Mono.Security/Mono.Security.Interface/: CertificateValidationHelper.cs  IMonoTlsEventSink.cs  MonoTlsConnectionInfo.cs  MonoTlsProviderFactory.cs  MonoTlsSettings.cs
mcs/class/Mono.Security/Mono.Security.X509/: X509Store.cs  X509Stores.cs
mcs/class/System/: Makefile  System-bare-net_4_x.csproj  System-net_4_x.csproj  System-secxml-net_4_x.csproj  System.dll.sources  mobile_System.dll.sources  monodroid_System.dll.sources  monotouch_System.dll.sources  xammac_System.dll.sources
mcs/class/System/Assembly/: AssemblyInfo.cs
mcs/class/System/Mono.Btls/: MonoBtlsBio.cs  MonoBtlsContext.cs  MonoBtlsException.cs  MonoBtlsKey.cs  MonoBtlsObject.cs  MonoBtlsPkcs12.cs  MonoBtlsProvider.cs  MonoBtlsSsl.cs  MonoBtlsSslCtx.cs  MonoBtlsStream.cs  MonoBtlsUtils.cs  MonoBtlsX509.cs  MonoBtlsX509Chain.cs  MonoBtlsX509Crl.cs  MonoBtlsX509Error.cs  MonoBtlsX509Exception.cs  MonoBtlsX509FileType.cs  MonoBtlsX509Format.cs  MonoBtlsX509Lookup.cs  MonoBtlsX509LookupMethod.cs  MonoBtlsX509LookupMethodAndroid.cs  MonoBtlsX509LookupMethodCollection.cs  MonoBtlsX509LookupMethodMono.cs  MonoBtlsX509Name.cs  MonoBtlsX509NameEntryType.cs  MonoBtlsX509NameList.cs  MonoBtlsX509Purpose.cs  MonoBtlsX509Revoked.cs  MonoBtlsX509Store.cs  MonoBtlsX509StoreCtx.cs  MonoBtlsX509VerifyFlags.cs  MonoBtlsX509VerifyParam.cs  NewMozRoots.cs  X509CertificateImplBtls.cs  X509ChainImplBtls.cs
mcs/class/System/Mono.Net.Security/: AsyncProtocolRequest.cs  ChainValidationHelper.cs  MobileAuthenticatedStream.cs  MobileTlsContext.cs  MonoTlsProviderFactory.Apple.cs  MonoTlsProviderFactory.Droid.cs  MonoTlsProviderFactory.cs  MonoTlsProviderFactoryExt.cs  NoReflectionHelper.cs  SystemCertificateValidator.cs
mcs/class/System/ReferenceSources/: Logging.cs
mcs/class/System/System/: MartinTest.cs
mcs/class/System/System.Net.Security/: SslStream.cs
mcs/class/System/System.Security.Cryptography.X509Certificates/: X509Certificate2Impl.cs  X509Certificate2ImplMono.cs
mcs/class/corlib/Assembly/: AssemblyInfo.cs
mcs/class/corlib/System.Security.Cryptography.X509Certificates/: X509CertificateImpl.cs
mcs/tests/: ver-il-net_4_x.xml
mcs/tools/btls/: Makefile  btls-cert-sync.cs
mcs/tools/security/: cert-sync.cs
mono/btls/: CMakeLists.txt  Makefile.am  btls-bio.c  btls-bio.h  btls-ssl-ctx.h  btls-ssl.c  btls-x509-crl.c  btls-x509-lookup-method.c  btls-x509-lookup-method.h  btls-x509-lookup.c  btls-x509-lookup.h  btls-x509-name.c  btls-x509-store-ctx.c  btls-x509-store-ctx.h  btls-x509-store.c  btls-x509-verify-param.c  btls-x509-verify-param.h  btls-x509.c  btls-x509.h
mono/metadata/: Makefile.am  gc.c  icall-def.h  icall.c  marshal.c  sgen-mono.c
mono/mini/: Makefile.am.in  mini.c
mono/sgen/: sgen-gc.c  sgen-gc.h
mono/unit-tests/: Makefile.am
mono/utils/: Makefile.am  mono-threads-coop.c
msvc/scripts/: order.xml
scripts/: btls-cert-sync
